--- a/css/author.css
+++ b/css/author.css
@@ -2,8 +2,7 @@ body { background-image: url('../img/carbon.jpg'); }
 
 .wrapper1 {
 
-	max-width: 1200px;
-	width: 90%;
+	width: 330px;
 	min-width: 330px;	
 	padding: 15px;
 	background-color: black;
@@ -14,9 +13,9 @@ body { background-image: url('../img/carbon.jpg'); }
 }
 
 #header  { 	padding: 0px;  background-color: black; } 
-.nav 	 { 	padding: 5px;  background-color: black; }
-#Events  { 	padding: 15px; background-color: black; }
-#Hours 	 { 	padding: 10px; background-color: black; 
+.nav 	 { 	padding: 1px;  background-color: black; }
+#article1{ 	padding: 15px; background-color: black; }
+#aside1  { 	padding: 10px; background-color: black; 
 			font-family: arial; font-size: 14px;color:grey; }
 
 .footer  { 	padding: 10px; 
@@ -32,35 +31,44 @@ h1 { text-align: center;
 	 text-transform: uppercase;
 	 color:#8e46a8;
 	 letter-spacing: 2px;
-	 margin-top: 20px;
+	 margin-top: 45px;
 	 margin-bottom: 20px;
 }
 p {  color:grey;
 	 font-family: arial;
-}										
+	 margin:auto;
+	 text-align: center;
+}	
+
+#aside1 p { text-align: left; padding:5px; }
+
+#article1 p { text-align: left; 
+			  padding:5px; }										
 
 
 /* nav */
 nav { text-align: center; font-size: 0px; }
 nav a {
+	margin:auto;
 	display: inline-block;
-	width: 100%;
+	width: 80%;
 	height: 30px;
 	line-height: 30px;
 	text-decoration: none;
 	background-color: black;
+	text-transform: uppercase;
 	color: #808080;
-	font-size: 15px;
+	font-size: 11px;
 	font-family: "Century Gothic",sans-serif;
 	transition: all .5s;
 }
 nav a:hover {
 	color: #626262;
 }
-@media screen and (min-width: 600px) { 
-	nav a { width: 50%; } 
+@media screen and (min-width: 330px) { 
+	nav a { width: 20%; } 
 }
-@media screen and (min-width: 900px) { 
+@media screen and (min-width: 330px) { 
 	nav a { width: 25%; } 
 }
 
@@ -72,7 +80,7 @@ nav a:hover {
 }
 
 /* Media Queries */
-@media screen and (min-width: 800px) {   
+@media screen and (min-width: 330px) {   
 	/*floating*/
 	.wrapper1 { padding: 10px; }
 	#article {
@@ -87,12 +95,11 @@ nav a:hover {
 	#footer { clear: both; }
 }
 
-.dividers {    margin:auto; margin-top:20px; margin-bottom: 20px; }
+.dividers {    margin:auto; margin-top:20px; margin-bottom: 30px; }
 .socialIcons { margin:auto; }
 .button { 	   padding:3px; opacity:0.6; }
-#homeImage {   margin-top: 20px; margin-bottom: 20px; }
-
-.bigPurps { margin:auto;}
+#homeImage {   margin-left:7px; margin-top:20px; }
+.bigPurps {    margin:auto;}
 
 
 
@@ -101,8 +108,7 @@ nav a:hover {
 --------------------------------*/
 #wrapper2 {
 	
-	max-width: 1200px;
-	width: 90%;
+	width: 330px;
 	min-width: 330px;	
 	padding: 1px;
 	background-color: black;
@@ -110,27 +116,24 @@ nav a:hover {
 	border-radius: 10px 0px;
 	opacity: 0.6
 }
-#header { 	padding: 0px;  background-color: black; }
-#Main   { 	padding-top: 25px; 
-			padding-bottom: 25px; 
-			background-color: black; }
+#header { 	padding: 0px; background-color: black; }
+#venueMain   { 	background-color: black; margin:auto; padding:17px;}
 
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 330px) {
 	/*f*/
 	#wrapper2 { padding: 10px; }
-	#Main { width: 100%; }
+	#venueMain { width: 100%; }
 	.footer { clear: both; }
 
 
 /* Media Queries */
-@media screen and (min-width: 800px) {   
+@media screen and (min-width: 330px) {   
 	/*floating*/
 	#wrapper1 { padding: 10px; }
 	#article {
 		min-height: 500px;
-		width: 60%;
-		float: left; }
+		width: 60%; }
 
 	#aside {
 		width: 40%;
@@ -138,12 +141,6 @@ nav a:hover {
 
 	.footer { clear: both; }
 }
-
-.dividers {    margin:auto; margin-top:20px; margin-bottom: 20px; }
-.socialIcons { margin:auto; }
-.button { 	   padding:3px; opacity:0.6; }
-#homeImage {   margin-top: 20px; margin-bottom: 20px; }
-
 
 
 /*-------------------------------
@@ -152,8 +149,7 @@ nav a:hover {
 
 .wrapper1 {
 	
-	max-width: 1200px;
-	width: 90%;
+	width: 330px;
 	min-width: 330px;	
 	padding: 1px;
 	background-color: black;
@@ -162,38 +158,113 @@ nav a:hover {
 	opacity: 0.6
 }
 #header { 	padding: 0px;  background-color: black; }
-#Main   { 	padding-top: 25px; 
-			padding-bottom: 25px; 
-			background-color: black; }
+.dividers3 { margin-left:20px; }
+#article3 { background-color:#252326; 
+			width:330px; 
+			height:600px; 
+			padding:25px;
+			margin-top:20px; }
 
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 330px) {
 	/*f*/
 	.wrapper1 { padding: 10px; }
-	#Main { width: 100%; }
 	.footer { clear: both; }
 
 
 /* Media Queries */
-@media screen and (min-width: 800px) {   
+@media screen and (min-width: 330px) {   
 	/*floating*/
 	.wrapper1 { padding: 10px; }
-	#article {
-		min-height: 500px;
-		width: 60%;
-		float: left; }
-
-	#aside {
-		width: 40%;
-		float: right; }
 
 	.footer { clear: both; }
 }
 
-.dividers {    margin:auto; margin-top:20px; margin-bottom: 20px; }
-.socialIcons { margin:auto; }
-.button { 	   padding:3px; opacity:0.6; }
-#homeImage {   margin-top: 20px; margin-bottom: 20px; }
+/* Form */
+
+.form-style-1 {
+    margin:10px auto;
+    max-width: 400px;
+    padding: 20px 12px 10px 20px;
+    font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    color:#7196ff;
+}
+.form-style-1 li {
+    padding: 0;
+    display: block;
+    list-style: none;
+    margin: 10px 0 0 0;
+}
+.form-style-1 label{
+    margin:0 0 3px 0;
+    padding:0px;
+    display:block;
+}
+.form-style-1 input[type=text], 
+.form-style-1 input[type=date],
+.form-style-1 input[type=datetime],
+.form-style-1 input[type=number],
+.form-style-1 input[type=search],
+.form-style-1 input[type=time],
+.form-style-1 input[type=url],
+.form-style-1 input[type=email],
+textarea, 
+select{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border:1px solid #BEBEBE;
+    padding: 7px;
+    margin:0px;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;  
+}
+.form-style-1 input[type=text]:focus, 
+.form-style-1 input[type=date]:focus,
+.form-style-1 input[type=datetime]:focus,
+.form-style-1 input[type=number]:focus,
+.form-style-1 input[type=search]:focus,
+.form-style-1 input[type=time]:focus,
+.form-style-1 input[type=url]:focus,
+.form-style-1 input[type=email]:focus,
+.form-style-1 textarea:focus, 
+.form-style-1 select:focus{
+    -moz-box-shadow: 0 0 8px #88D5E9;
+    -webkit-box-shadow: 0 0 8px #88D5E9;
+    box-shadow: 0 0 8px #88D5E9;
+    border: 1px solid #88D5E9;
+}
+.form-style-1 .field-divided{
+    width: 49%;
+}
+
+.form-style-1 .field-long{
+    width: 100%;
+}
+.form-style-1 .field-select{
+    width: 100%;
+}
+.form-style-1 .field-textarea{
+    height: 100px;
+}
+.form-style-1 input[type=submit], .form-style-1 input[type=button]{
+    background: #4B99AD;
+    padding: 8px 15px 8px 15px;
+    border: none;
+    color: #fff;
+}
+.form-style-1 input[type=submit]:hover, .form-style-1 input[type=button]:hover{
+    background: #4691A4;
+    box-shadow:none;
+    -moz-box-shadow:none;
+    -webkit-box-shadow:none;
+}
+.form-style-1 .required{
+    color:#b372d7;
+}
 
 
 
@@ -202,8 +273,8 @@ nav a:hover {
 --------------------------------*/
 .wrapper1 {
 	
-	max-width: 1200px;
-	width: 90%;
+
+	width: 350px;
 	min-width: 330px;	
 	padding: 1px;
 	background-color: black;
@@ -212,38 +283,45 @@ nav a:hover {
 	opacity: 0.6
 }
 #header { 	padding: 0px;  background-color: black; }
-#Main   { 	padding-top: 25px; 
-			padding-bottom: 25px; 
-			background-color: black; }
+#article4 { background-color:#252326; 
+			width:100%; 
+			height:600px; 
+			padding:35px;
+			margin-top:20px; 
+}
+
+h3 { 
+	 text-align: center;
+	 font-size: 14px;
+	 font-family: Futura,"Trebuchet MS",Arial,sans-serif;
+	 text-transform: uppercase;
+	 color:#8e46a8;
+	 letter-spacing: 1px;
+	 margin-top: 45px;
+	 margin-bottom: 20px;
+}
 
 
-@media screen and (min-width: 800px) {
+
+@media screen and (min-width: 330px) {
 	/*f*/
 	.wrapper1 { padding: 10px; }
-	#Main { width: 100%; }
 	.footer { clear: both; }
 
 
 /* Media Queries */
-@media screen and (min-width: 800px) {   
+@media screen and (min-width: 330px) {   
 	/*floating*/
 	.wrapper1 { padding: 10px; }
-	#article {
-		min-height: 500px;
-		width: 60%;
+	#article4 {
+		min-height: 680px;
+		width: 100%;
 		float: left; }
-
-	#aside {
-		width: 40%;
-		float: right; }
 
 	.footer { clear: both; }
 }
 
-.dividers {    margin:auto; margin-top:20px; margin-bottom: 20px; }
-.socialIcons { margin:auto; }
-.button { 	   padding:3px; opacity:0.6; }
-#homeImage {   margin-top: 20px; margin-bottom: 20px; }
+
 
 
 
