--- a/css/style_common.css
+++ b/css/style_common.css
@@ -1,6 +1,6 @@
 .view {
-   width: 155px;
-   height: 230px;
+   width: 115px;
+   height: 170px;
    margin: 10px;
    display: inline-block;
    overflow: hidden;
@@ -10,7 +10,7 @@
 }
 .view .mask,.view .content {
    width: 155px;
-   height: 230px;
+   height: 170px;
    position: absolute;
    overflow: hidden;
    top: 0;
@@ -27,20 +27,23 @@
    font-size: 15px;
    padding: 10px;
    background: rgba(0, 0, 0, 0.8);
-   margin: 10px 0 0 0;
+   margin-right:40px;
 }
 .view p {                        /* paragrapgh info */
    font-family: Georgia, serif;
-   font-size: 13px;
+   font-size: 10px;
    position: relative;
    color: #fff;
-   padding: 10px 10px 20px;
+   margin-right:30px;
+   padding:5px;
    text-align: center;
 }
 .view a.info {                /* read more */
    display: inline-block;
    text-decoration: none;
-   padding: 7px 14px;
+   padding-top:50px;
+   padding:5px;
+   margin-right:41px;
    background: #000;
    color: #fff;
    -webkit-box-shadow: 0 0 1px #000;
