--- a/css/author.css
+++ b/css/author.css
@@ -1,4 +1,4 @@
-body { background-image: url('../img/carbon.jpg'); }
+body { background-color:black;}
 
 .wrapper1 {
 
@@ -8,7 +8,6 @@ body { background-image: url('../img/carbon.jpg'); }
 	background-color: black;
 	margin: auto;
 	border-radius: 10px 0px;
-	opacity: 0.7
 	
 }
 
@@ -99,7 +98,22 @@ nav a:hover {
 .socialIcons { margin:auto; }
 .button { 	   padding:3px; opacity:0.6; }
 #homeImage {   margin-left:7px; margin-top:20px; }
-.bigPurps {    margin:auto;}
+.bigPurps {    margin:auto; }
+
+
+/*B&W*/
+.bw {
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+          margin-left:5px; padding-top:40px;
+}
+ 
+.bw:hover {
+  -webkit-filter: grayscale(100%);
+}
 
 
 
@@ -143,6 +157,7 @@ nav a:hover {
 }
 
 
+
 /*-------------------------------
 	    	Page  3
 --------------------------------*/
@@ -158,8 +173,8 @@ nav a:hover {
 	opacity: 0.6
 }
 #header { 	padding: 0px;  background-color: black; }
-.dividers3 { margin-left:20px; }
-#article3 { background-color:#252326; 
+.dividers3{ margin-left:20px; }
+#article3 { background-color:black; 
 			width:330px; 
 			height:600px; 
 			padding:25px;
@@ -283,7 +298,7 @@ select{
 	opacity: 0.6
 }
 #header { 	padding: 0px;  background-color: black; }
-#article4 { background-color:#252326; 
+#article4 { background-color:black; 
 			width:100%; 
 			height:600px; 
 			padding:35px;
